# DemoTradingBot

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  SECURITY_REVIEW.md  cli.py  pyproject.toml  requirements.txt
bot/: client.py  exceptions.py  logging_config.py  orders.py  risk.py  validators.py
scripts/: demo_log_generation.py
tests/: test_orders.py  test_validators.py
