[project]
name = "trading-bot"
version = "1.0.0"
description = "Industrial-grade CLI for Binance Futures Demo Trading (USDT-M): MARKET, LIMIT, STOP, and TWAP orders."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "urllib3==2.2.2",
]

[project.scripts]
trading-bot = "cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = ["logs", "docs", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # line length handled by formatter/reviewer judgment, not a hard gate

[tool.ruff.lint.isort]
known-first-party = ["bot"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]  # nested `with` blocks read more clearly than combined ones in test setup

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
addopts = "-q --cov=bot --cov=cli --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]
